--- a/index.html
+++ b/index.html
@@ -1,7 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gaby Moreno César</title>
+    <link rel="icon" type="image/x-icon" href="images/gaby-logo.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="styles/plex.css" rel="stylesheet">
+    <link href="styles/styles.css" rel="stylesheet">
+    <style>
+        html {
+            background-color: #d9fbfb;
+        }
+        body {
+            color: #007d79;
+            text-align: left;
+        }
+        header {
+            background-color: #d9fbfb;
+        }
+        h1 {
+            font-size: 40px;
+            font-style: italic;
+            font-weight: 500;
+            margin-bottom: 30px;
+        }
+        h3 {
+            font-size: x-large;
+            font-weight: 600;
+        }
+        p {
+            font-size: 26px;
+            font-weight: 400;
+            line-height: 1.5;
+            padding-bottom: 30px;
+        }
+        ul {
+            font-size: x-large;
+            list-style-type: none;
+            /* padding-top: 20px; */
+            padding-bottom: 30px;
+        }
+        li {
+            font-size: x-large;
+            line-height: 1.5;
+            margin-bottom: 10px;
+        }
+        article {
+            margin: 100px 20px;
+        }
+        a:link, a:visited {
+            color: #007d79;
+        }
+        a:hover {
+            text-decoration-color: #007d79;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>    
+        <nav>
+            <span class="nav-logo"><a href="/"><img src="images/gaby-logo.svg" width="50px" alt=""></a></span>
+            <span class="nav-link no-margin-right"><a href="https://www.linkedin.com/in/gabymorenocesar/" target="_blank">LinkedIn</a></span>
+            <span class="nav-link"> | </span>
+            <span class="nav-link"><a href="./about.html">About</a></span>
+        </nav>
+    </header>
+
+    <main>
+        <article>
+            <h1>Dear visitor,</h1>
+            <p>Welcome! My name is Gaby Moreno César. My relationship with technology started from an early age, when my last two names would break databases wherever I went. These days I'm a Design Principal at IBM, based out of Austin, Texas. I have been working on cloud native, distributed technologies for just over a decade now. My favorite part of my job is getting to help enterprises transform. <a href="about.html">Lear more about me</a> &#8594;</p>
+            <h3>Select work:</h3>
+            <ul>
+                <li><a href="satellite.html">IBM Cloud Satellite</a></li>
+                <li><a href="roks.html">Red Hat OpenShift on IBM Cloud</a></li>
+                <li><a href="k8s.html">The Kubernetes Special Interest Group for Usability</a></li>
+            </ul>
+            
+
+        </article>
+    </main>
+
 </body>
 </html>
