modified urls, added gitignore

--- a/k8s.html
+++ b/k8s.html
@@ -50,7 +50,7 @@
                     <p class="subtle-text compress meta">2019 / Open Source</p>
                     <p class="accent-text meta"> » 
                         <a class="primary-link" href="https://github.com/kubernetes-retired/sig-usability" target="_blank">
-                            github.com/kubernetes/sig-usability
+                            github.com/../sig-usability
                         </a>
                     </p>
                     <dl class="meta">
