--- a/roks.html
+++ b/roks.html
@@ -48,7 +48,7 @@
                     <p class="subtle-text compress meta">2019 / Product Design</p>
                     <p class="accent-text meta"> » 
                         <a class="primary-link" href="https://www.ibm.com/products/openshift" target="_blank">
-                            ibm.com/products/openshift
+                            ibm.com/.../openshift
                         </a>
                     </p>
                     <dl class="meta">
