--- a/roks.html
+++ b/roks.html
@@ -139,7 +139,7 @@
                         <p class="subtle-text date">2020</p>
                         <a href="https://twitter.com/iamwill/status/1220031430799101953" target="_blank">
                             <p><strong>will.i.am</strong><span class="items-list-dash"> — </span></p>
-                            <p><em>I.AM+ to Accelerate Ethical AI Adoption with Red Hat OpenShift on IBM Cloud</em></p>
+                            <p><em>I.AM+ to Accelerate Ethical AI Adoption</em></p>
                         </a>
                     </li>
                 </ul>
