--- a/roks.html
+++ b/roks.html
@@ -81,6 +81,10 @@
                     <img class="lightbox__image" width="100%" src="images/roks/roks-cluster-detail.png" alt="">
                     <img class="lightbox__image" width="100%" src="images/roks/roks-cluster-worker-nodes.png" alt="">
                     <img class="lightbox__image" width="100%" src="images/roks/roks-clusters.png" alt="">
+                    <img class="lightbox__image" width="100%" src="images/roks/process/roks-as-is.png" alt="A user journey of the current process to set up an OpenShift cluster.">
+                    <img class="lightbox__image" width="100%" src="images/roks/process/roks-to-be.png" alt="The proposed to-be flow.">
+                    <img class="lightbox__image" width="100%" src="images/roks/process/roks-working-session.png" alt="A crit session with our architect on an in progress flow.">
+                    <img class="lightbox__image" width="100%" src="images/roks/process/roks-ai-analysis.png" alt="An AI analysis of top trends in our beta testers Slack channel.">
                 </div>
                 <a class="in-page-link" href="#title"><p class="expand-top subtle-text"><em>Top</em></p></a>
             </section>
