--- a/satellite.html
+++ b/satellite.html
@@ -52,7 +52,7 @@
                     <p class="subtle-text compress meta">2021 / Product Design</p>
                     <p class="accent-text meta"> » 
                         <a class="primary-link" href="https://www.ibm.com/products/satellite" target="_blank">
-                            ibm.com/.../satellite
+                            ibm.com/satellite
                         </a>
                     </p>
                     <dl class="meta">
@@ -70,8 +70,8 @@
                     <p>IBM Cloud Satellite extends IBM Cloud to any environment, letting businesses deploy and manage their workloads across on-premises, multi-cloud, and edge environments. I was the design lead on Satellite, which ended up being a hugely transformative experience for me. I had been working in cloud computing for 7+ years and was super excited at the idea of working on new compute models.</p>
                     <p>The idea of Satellite came about shortly after IBM’s acquisition of Red Hat (2018), which included Red Hat’s flagship offering, the OpenShift Container Platform. Our Kubernetes team, worked with the acquisition timeline to offer a managed version of OpenShift, short named ROKS, by the time the deal was finalized in 2019. While the launch of ROKS was extremely successful, we were still seeing IT teams struggling to manage OpenShift on-prem. This was largely due to the fact that they could’t use public clouds for certain workloads, either due to regulation, security or latency requirements. But still, as they say, “friends don’t let friends manage OpenShift.” What if we could manage OpenShift for them, not on the cloud, but on their own environment?</p>
                     <p>Our design team helped take the idea of Satellite from concept car to Tech Preview. We ramped up on the current state of distributed cloud offerings on the market, which were all in the early preview stage, and put a storyboard together to get early feedback from potential users. The storyboard was used as part of Satellite’s Tech Preview announcement at the IBM conference, Think 2020.</p>
-                    <p>We quickly realized that offering managed OpenShift on-prem was only the beginning. There was a much broader need for managed cloud services in any environment.</p>
-                    <p>Our design team worked on clickable prototypes and user testing, which formed the foundation of Satellite’s Closed Beta. During Beta, rubber hit the road on the sheer number of environments that we needed to support and we were able to find a good middle ground between establishing minimum requirements that would support the most environments and offering quick starts to allow users to see the magic of a cloud service running in a multi-cloud environment in minutes. This was later cited as one of the main wow factors when Satellite won it’s Red Dot: Best of the Best award.</p>
+                    <p>We quickly realized that offering managed OpenShift on-prem was only the beginning. There was a much broader need for managed cloud services in any environment. Our design team worked on clickable prototypes and user testing, which formed the foundation of Satellite’s Closed Beta.</p>
+                    <p>During Satellite’s Beta, I conducted a UX audit of the experience of setting up Cloud Pak for Data on AWS via Satellite, revealing 96 steps and sometimes up to a month to get started. I collaborated with a group of designers from across IBM Cloud on a template pattern that would enable us to enable a one-click create for Satellite and other services across the IBM Cloud platform. Using the new template pattern led to a reduction in time to set up a Satellite location from one month to 15 minutes, 96 steps down to 7. This easy install was later cited as one of the main wow factors when Satellite won it’s Red Dot: Best of the Best award.</p>
                     <p>Satellite GA’d in early 2021 and is now a key enabler of IBM’s hybrid cloud strategy. </p>
                 </section>
         </section>
@@ -84,6 +84,13 @@
                     <img class="lightbox__image" width="100%" src="images/satellite/satellite-hosts-dark.jpeg" alt="">
                     <img class="lightbox__image" width="100%" src="images/satellite/satellite-endpoints-dark.jpeg" alt="">
                     <img class="lightbox__image" width="100%" src="images/satellite/satellite-services-light.jpeg" alt="">
+                    <img class="lightbox__image" width="100%" src="images/satellite/process/satellite-competitive.png" alt="The competitive analysis I put together for a kickoff workshop.">
+                    <img class="lightbox__image" width="100%" src="images/satellite/process/satellite-hill.png" alt="An early design intent statement.">
+                    <img class="lightbox__image" width="100%" src="images/satellite/process/satellite-storyboard-1.png" alt="An early storyboard our team prepared for concept testing.">
+                    <img class="lightbox__image" width="100%" src="images/satellite/process/satellite-storyboard-2.png" alt="An early prototype we prepared for Satellite's Think announcement.">
+                    <img class="lightbox__image" width="100%" src="images/satellite/process/satellite-beta.png" alt="A UX audit I conducted during beta identifying 96 steps to get started.">
+                    <img class="lightbox__image" width="100%" src="images/satellite/process/satellite-ga-to-be.jpeg" alt="The proposed new flow which reduced getting started from 96 steps to 7.">
+                    <img class="lightbox__image" width="100%" src="images/satellite/process/satellite-templates-wg.png" alt="A working group we formed to align around a template pattern across IBM Cloud.">
                 </div>
                 <a class="in-page-link" href="#title"><p class="expand-top subtle-text"><em>Top</em></p></a>
             </section>
