--- a/k8s.html
+++ b/k8s.html
@@ -100,8 +100,8 @@
                     <li>
                         <p class="subtle-text date">2021</p>
                         <a href="https://www.youtube.com/watch?v=One7DEyWfh0" target="_blank">
-                            <p><strong>KubeCon+CloudNativeCon North America</strong><span class="items-list-dash"> — </span></p>
-                            <p><em>Why is Anyone Using Kubernetes Anyway?</em></p>
+                            <p><strong>KubeCon+CloudNativeCon North America</strong></p>
+                            <!-- <p><em>Why is Anyone Using Kubernetes Anyway?</em></p> -->
                         </a>
                     </li>
                     <li>
@@ -114,8 +114,8 @@
                     <li>
                         <p class="subtle-text date">2020</p>
                         <a href="https://www.youtube.com/watch?v=One7DEyWfh0" target="_blank">
-                            <p><strong>KubeCon+CloudNativeCon North America</strong><span class="items-list-dash"> — </span></p>
-                            <p><em>Putting the Focus on Upstream Usability</em></p>
+                            <p><strong>KubeCon+CloudNativeCon North America</strong></p>
+                            <!-- <p><em>Putting the Focus on Upstream Usability</em></p> -->
                         </a>
                     </li>
                     <li>
