--- a/k8s.html
+++ b/k8s.html
@@ -107,8 +107,8 @@
                     <li>
                         <p class="subtle-text date">2021</p>
                         <a href="https://www.youtube.com/watch?v=Byn0N_ZstE0" target="_blank">
-                            <p><strong>KubeCon+CloudNativeCon Europe</strong><span class="items-list-dash"> — </span></p>
-                            <p><em>Studying Kubernetes' Users</em></p>
+                            <p><strong>KubeCon+CloudNativeCon Europe</strong></p>
+                            <!-- <p><em>Studying Kubernetes' Users</em></p> -->
                         </a>
                     </li>    
                     <li>
@@ -121,8 +121,8 @@
                     <li>
                         <p class="subtle-text date">2020</p>
                         <a href="https://youtu.be/H6UuxSZEw3s?si=XCh1Z5z95kwOtLSe" target="_blank">
-                            <p><strong>KubeCon+CloudNativeCon Europe</strong><span class="items-list-dash"> — </span></p>
-                            <p><em>Unifying the Experience for the Kubernetes User</em></p>
+                            <p><strong>KubeCon+CloudNativeCon Europe</strong></p>
+                            <!-- <p><em>Unifying the Experience for the Kubernetes User</em></p> -->
                         </a>
                     </li>
                 </ul>
