--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
     <main>
         <article>
-            <h1>Dear visitor,</h1>
-            <p>Welcome! My name is Gaby Moreno César. My relationship with technology started from an early age, when my two last names would break databases wherever I went. These days I'm a Design Principal at IBM, based out of Austin, Texas. I have been working on cloud native, distributed technologies for just over a decade now. My favorite part of my job is getting to help enterprises transform. <a href="about.html">Lear more about me</a> &#8594;</p>
+            <h1>Gaby Moreno César</h1>
+            <p>Hello and welcome! I'm a Design Principal at IBM, working on IBM Cloud. I have a decade of experience designing award-winning, enterprise products.</p>
             <h3>Select work:</h3>
             <ul>
                 <li><a href="satellite.html">IBM Cloud Satellite</a></li>
