Updated home and footers

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             </figure>
             
             <section class="no-top-padding">
-                <p>Hi friend, thank you for visiting. My name is Gaby Moreno César, I'm a Design Principal on IBM Cloud, leading design of Cloud Native PaaS and Distributed Cloud Solutions. I love turning ideas into multi-million-dollar products.</p>
+                <p>I'm a Design Principal on IBM Cloud, leading design of Cloud Native PaaS and Distributed Cloud Solutions. I love turning ideas into multi-million-dollar products.</p>
                 <p>With over a decade of experience in the cloud industry I enjoy helping highly regulated enterprises transform through emerging, hybrid cloud technology and work closely with Product Management, Engineering, Marketing and other partners across the full product lifecycle.</p>
                 <p>My design work has earned multiple international awards and recognitions, such as a Red Dot: Best of the Best, a Good Design Award,  BIG Awards for Business: Product of the Year and multiple IBM Outstanding Technical Achievements.</p>
                 <p>I speak locally, nationally, and internationally at conferences such as KubeCon+CloudNativeCon Europe & North America, SXSW Interactive, and the Grace Hopper Celebration of Women in Computing, where I enjoy speaking to both designer and developer audiences.</p>
@@ -45,8 +45,7 @@
     </main>
 
     <footer>
-        <a href="/"><img class="footer-logo" src="images/gaby-logo.svg" alt="" width="40em"></a>
-        <p>Designed & <a href="https://github.com/morengab/morengab.github.io" target="_blank">coded</a> by <a href="about.html">Gaby</a>. Powered by dark chocolate, green tea, and hot coffee.</p>
+        <p><a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby.</p>
     </footer>
 </body>
 </html>
