--- a/k8s.html
+++ b/k8s.html
@@ -168,8 +168,7 @@
     </main>
 
     <footer>
-        <a href="/"><img class="footer-logo" src="images/gaby-logo.svg" alt="" width="40em"></a>
-        <p>Designed & <a href="https://github.com/morengab/morengab.github.io" target="_blank">coded</a> by <a href="about.html">Gaby</a>. Powered by dark chocolate, green tea, and hot coffee.</p>
+        <p><a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby.</p>
     </footer>
 
     <div id="lightbox" class="lightbox__close">
