--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
         </article>
     </main>
     <footer>
-        <p><a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby.</p>
+        <p>&copy; Gaby Moreno César | <a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby</p>
     </footer>
-
 </body>
 </html>
