--- a/satellite.html
+++ b/satellite.html
@@ -31,10 +31,11 @@
         <article class="article"> 
             <section id="title">
                 <h2>IBM Cloud Satellite</h2>
-                <p class="subtitle">A new product based on an emerging cloud computing model called distributed cloud.</p>
+                <p class="subtitle">A new product enabling IT teams to deploy workloads across any environment.</p>
                 <nav class="article-nav">
                     <ul>
                         <li><a href="#synopsis" class="subtle-link">Synopsis</a></li>
+                        <li><a href="#video" class="subtle-link">Video</a></li>
                         <li><a href="#awards" class="subtle-link">Awards</a></li>
                         <li><a href="#press" class="subtle-link">Press</a></li>
                         <li><a href="#images" class="subtle-link">Images</a></li>
@@ -50,9 +51,9 @@
                 <section class="solid-border">
                     <h3 class="compress">IBM Cloud Satellite</h3>
                     <p class="subtle-text compress meta">2021 / Product Design</p>
-                    <p class="accent-text meta"> » 
+                    <p class="accent-text meta">
                         <a class="primary-link" href="https://www.ibm.com/products/satellite" target="_blank">
-                            ibm.com/satellite
+                            Visit <span>&rarr;</span>
                         </a>
                     </p>
                     <dl class="meta">
@@ -67,14 +68,21 @@
                 </section>
 
                 <section class="section-synopsis-cont">
-                    <p>IBM Cloud Satellite extends IBM Cloud to any environment, letting businesses deploy and manage their workloads across on-premises, multi-cloud, and edge environments. I was the design lead on Satellite, which ended up being a hugely transformative experience for me. I had been working in cloud computing for 7+ years and was super excited at the idea of working on new compute models.</p>
-                    <p>The idea of Satellite came about shortly after IBM’s acquisition of Red Hat (2018), which included Red Hat’s flagship offering, the OpenShift Container Platform. Our Kubernetes team, worked with the acquisition timeline to offer a managed version of OpenShift, short named ROKS, by the time the deal was finalized in 2019. While the launch of ROKS was extremely successful, we were still seeing IT teams struggling to manage OpenShift on-prem. This was largely due to the fact that they could’t use public clouds for certain workloads, either due to regulation, security or latency requirements. But still, as they say, “friends don’t let friends manage OpenShift.” What if we could manage OpenShift for them, not on the cloud, but on their own environment?</p>
-                    <p>Our design team helped take the idea of Satellite from concept car to Tech Preview. We ramped up on the current state of distributed cloud offerings on the market, which were all in the early preview stage, and put a storyboard together to get early feedback from potential users. The storyboard was used as part of Satellite’s Tech Preview announcement at the IBM conference, Think 2020.</p>
+                    <p>IBM Cloud Satellite lets IT teams deploy and manage their workloads across any environment including on-premises, multi-cloud, and the edge. I was the design lead on Satellite helping take it from an idea to launch.
+                    </p>
+                    <p>The idea of Satellite came about shortly after IBM’s acquisition of Red Hat (2018), which included Red Hat’s flagship offering, the OpenShift Container Platform. We noticed IT teams struggling to self manage OpenShift on-prem. This was largely due to the fact that they could’t use OpenShift on the public cloud due to regulation, security or latency requirements. But still, as they say, “friends don’t let friends manage OpenShift.” What if we could enable seamless management of OpenShift across any environment?</p>
+                    <p>Our design team helped take the idea of Satellite from concept car to Tech Preview. We ramped up on the current state of distributed cloud offerings on the market, which were all in the early preview stage. We put a storyboard together to get early feedback from potential users culminating in Satellite's Tech Preview debut at IBM's Think 2020 conference.</p>
                     <p>We quickly realized that offering managed OpenShift on-prem was only the beginning. There was a much broader need for managed cloud services in any environment. Our design team worked on clickable prototypes and user testing, which formed the foundation of Satellite’s Closed Beta.</p>
                     <p>During Satellite’s Beta, I conducted a UX audit of the experience of setting up Cloud Pak for Data on AWS via Satellite, revealing 96 steps and sometimes up to a month to get started. I collaborated with a group of designers from across IBM Cloud on a template pattern that would enable us to enable a one-click create for Satellite and other services across the IBM Cloud platform. Using the new template pattern led to a reduction in time to set up a Satellite location from one month to 15 minutes, 96 steps down to 7. This easy install was later cited as one of the main wow factors when Satellite won it’s Red Dot: Best of the Best award.</p>
-                    <p>Satellite GA’d in early 2021 and is now a key enabler of IBM’s hybrid cloud strategy. </p>
+                    <p>Satellite officially launched in early 2021 and is now a key enabler of IBM’s hybrid cloud strategy.</p>
                 </section>
-        </section>
+            </section>
+
+            <section id="video" class="dotted-border layout-container">  
+                <h3>Video</h3>    
+                <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/903099334?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="IBM Cloud Satellite"></iframe></div>
+                <script src="https://player.vimeo.com/api/player.js"></script>
+            </section>
 
             <section id="images" class="dotted-border layout-container">
                 <h3>Images</h3>
